--- a/SQLZO/index.html
+++ b/SQLZO/index.html
@@ -11,6 +11,11 @@
 
 </head>
 <body>
-    
+    <!--encabezado-->
+    <header></header>
+    <!--cuerpo-->
+    <section></section>
+    <!--pie-->
+    <footer></footer>
 </body>
 </html>
