--- a/SQLZO/index.html
+++ b/SQLZO/index.html
@@ -13,7 +13,7 @@
 <body>
     <!--encabezado-->
     <header>
-
+        <!--Inicio del navbar-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">
                 <img src="/docs/4.6/assets/brand/bootstrap-solid.svg" width="30" height="30" alt="">
@@ -37,7 +37,7 @@
                 </li>
               </ul>
             </div>
-          </nav>
+          </nav> <!--Fin del navbar-->
 
     </header>
     <!--cuerpo-->
