--- a/SQLZO/index.html
+++ b/SQLZO/index.html
@@ -16,7 +16,7 @@
         <!--Inicio del navbar-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">
-                <img src="/docs/4.6/assets/brand/bootstrap-solid.svg" width="30" height="30" alt="">
+                <img src="img/710Qtpe3XgL-removebg-preview.png" width="30" height="30" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
