--- a/SQLZO/index.html
+++ b/SQLZO/index.html
@@ -53,10 +53,13 @@
                         </ol>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="" class="d-block w-100" alt="...">
+                            <img src="imp/carrusel.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="" class="d-block w-100" alt="...">
+                            <img src="imp/hongos6.jpg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="imp/mota1.jpg" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators" data-slide="prev">
