--- a/SQLZO/productos.html
+++ b/SQLZO/productos.html
@@ -41,7 +41,15 @@
      </header>
      <!--cuerpo-->
      <section>
- 
+        <article>
+          <div class="row">
+            <div class="col-2">2</div>
+            <div class="col-3">3</div>
+            <div class="col-2">2</div>
+            <div class="col-3">3</div>
+            <div class="col-2">2</div>
+          </div>
+        </article>
      </section>
      <!--pie-->
      <footer>
