--- a/SQLZO/mota.html
+++ b/SQLZO/mota.html
@@ -16,31 +16,56 @@
     </header>
     <!--cuerpo-->
     <section>
-        <article>
-            <div class="card" style="width: 18rem;">
-                <img src="imp" class="card-img-top" alt="...">
+
+        <div class="title">
+            <h1>Tipos de Cepas</h1>
+        </div>
+        <!--tarjetas -->
+        <article class="row mx-4 text-center">
+            
+            <div class="card col-sm-3 col-ms-3 m-4 " style="width: 18rem;">
+                <img src="imp/mota.jpg" height="200px" class="card-img-top " alt="...">
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <h2>White Widow</h2>
                 </div>
               </div>
-              <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+              <div class="card col-3 m-4" style="width: 18rem;">
+                <img src="imp/mota1.jpg" height="200px"  class="card-img-top" alt="...">
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <h2>Og Kush</h2>
                 </div>
               </div>
-              <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+              <div class="card col-3 m-4" style="width: 18rem;">
+                <img src="imp/mota2.jpg" height="200px" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <H2>Super Skunk</H2>
                 </div>
               </div>
-              <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+              <div class="card col-3 m-4" style="width: 18rem;">
+                <img src="imp/mota3.jpg" height="200px" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <h2>Amnesia</h2>
                 </div>
               </div>
+              <div class="card col-3 m-4" style="width: 18rem;">
+                <img src="imp/mota5.jpg" height="200px" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h2>Gelatto</h2>
+                </div>
+              </div>
+              <div class="card col-3 m-4" style="width: 18rem;">
+                <img src="imp/mota6.jpg" height="200px" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h2>Black Domina</h2>
+                </div>
+              </div>
+              <div class="card col-3 m-4" style="width: 18rem;">
+                <img src="imp/mota7.jpg" height="200px" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h2>Critical Kush</h2>
+                </div>
+              </div>
+
         </article>
 
     </section>
