--- a/SQLZO/productos.html
+++ b/SQLZO/productos.html
@@ -16,7 +16,7 @@
 
         <!--Inicio del navbar-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
                 <img src="img/710Qtpe3XgL-removebg-preview.png" width="30" height="30" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,11 +43,15 @@
      <section>
         <article>
           <div class="row">
-            <div class="col-2">2</div>
-            <div class="col-3">3</div>
-            <div class="col-2">2</div>
-            <div class="col-3">3</div>
-            <div class="col-2">2</div>
+            <div class="col-2"></div>
+            <div class="col-3">
+              <a href="">
+                <img src="imp/mota2.jpg" height="500px"  alt="sin imagen">
+              </a>  
+            </div>
+            <div class="col-2"></div>
+            <div class="col-3"></div>
+            <div class="col-2"></div>
           </div>
         </article>
      </section>
