--- a/SQLZO/productos.html
+++ b/SQLZO/productos.html
@@ -42,10 +42,10 @@
      <!--cuerpo-->
      <section>
         <article>
-          <div class="row">
+          <div class="row mt-4">
             <div class="col-2"></div>
             <div class="col-3">
-              <a href="">
+              <a href="mota.html">
                 <img src="imp/mota2.jpg" height="500px"  alt="sin imagen">
               </a>  
             </div>
