--- a/SQLZO/index.html
+++ b/SQLZO/index.html
@@ -26,9 +26,14 @@
                 <li class="nav-item active">
                   <a class="nav-link" href="index.html">Inicio<span class="sr-only">(current)</span></a>
                 </li>
+                
 
                 <li class="nav-item">
-                  <a class="nav-link" href="productos.html">Productos</a>
+                  <a class="nav-link" href="productos.html">Productos
+                    <div class="alert alert-danger" role="alert">
+                      Ha cambiado de pagina
+                    </div>
+                  </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Información</a>
