--- a/SQLZO/index.html
+++ b/SQLZO/index.html
@@ -27,13 +27,9 @@
                   <a class="nav-link" href="index.html">Inicio<span class="sr-only">(current)</span></a>
                 </li>
                 
-
+                  
                 <li class="nav-item">
-                  <a class="nav-link" href="productos.html">Productos
-                    <div class="alert alert-danger" role="alert">
-                      Ha cambiado de pagina
-                    </div>
-                  </a>
+                  <a class="nav-link" href="productos.html">Productos</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Información</a>
