--- a/SQLZO/index.html
+++ b/SQLZO/index.html
@@ -79,7 +79,23 @@
                 </div>
                 <div class="col-3"></div>
             </div>
-        </article>
+        </article><!--Fin de carrusel-->
+        <!--inicio botones paginas-->
+        <article>
+            <div class="row mt-5">
+              <div class="col-2"></div>
+              <div class="col-3">
+                <img src="imp/hongos6.jpg" height="300px" width="100px" class="d-block w-100" alt="...">
+              </div>
+              <div class="col-2"></div>
+              <div class="col-3">
+                <img src="imp/hongos6.jpg" height="300px" width="100px" class="d-block w-100" alt="...">
+              </div>
+              <div class="col-2"></div>
+  
+  
+            </div>
+          </article><!--Fin botones paginas-->
     </section>
     <!--pie-->
     <footer></footer>
