--- a/SQLZO/productos.html
+++ b/SQLZO/productos.html
@@ -41,7 +41,7 @@
      </header>
      <!--cuerpo-->
      <section>
-        <article>
+        <article><!--imagenes-->
           <div class="row mt-4">
             <div class="col-2"></div>
             <div class="col-3">
@@ -52,7 +52,7 @@
             <div class="col-2"></div>
             <div class="col-3"></div>
             <div class="col-2"></div>
-          </div>
+          </div><!--fin imagenes-->
         </article>
      </section>
      <!--pie-->
