--- a/SQLZO/mota.html
+++ b/SQLZO/mota.html
@@ -12,54 +12,76 @@
 <body>
     <!--encabezado-->
     <header>
-          
+                  <!--Inicio del navbar-->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <a class="navbar-brand" href="#">
+              <img src="img/710Qtpe3XgL-removebg-preview.png" width="30" height="30" alt="">
+          </a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item active">
+                <a class="nav-link" href="index.html">Inicio<span class="sr-only">(current)</span></a>
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link" href="productos.html">Productos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Información</a>
+              </li>
+            </ul>
+          </div>
+        </nav> <!--Fin del navbar-->
     </header>
     <!--cuerpo-->
     <section>
 
-        <div class="title">
+        <div class="title text-center">
             <h1>Tipos de Cepas</h1>
         </div>
         <!--tarjetas -->
-        <article class="row mx-4 text-center">
+        <article class=" row mx-2 container  ">
             
-            <div class="card col-sm-3 col-ms-3 m-4 " style="width: 18rem;">
-                <img src="imp/mota.jpg" height="200px" class="card-img-top " alt="...">
+            <div class="card col-sm-2 m-2 " style="width: 18rem;">
+                <img src="imp/mota.jpg" height="200px"  class="card-img-top " alt="...">
                 <div class="card-body">
                     <h2>White Widow</h2>
                 </div>
               </div>
-              <div class="card col-3 m-4" style="width: 18rem;">
-                <img src="imp/mota1.jpg" height="200px"  class="card-img-top" alt="...">
+              <div class="card col-sm-2 m-2" style="width: 18rem;">
+                <img src="imp/mota1.jpg" height="200px"   class="card-img-top" alt="...">
                 <div class="card-body">
                     <h2>Og Kush</h2>
                 </div>
               </div>
-              <div class="card col-3 m-4" style="width: 18rem;">
+              <div class="card col-sm-2 m-2" style="width: 18rem;">
                 <img src="imp/mota2.jpg" height="200px" class="card-img-top" alt="...">
                 <div class="card-body">
                     <H2>Super Skunk</H2>
                 </div>
               </div>
-              <div class="card col-3 m-4" style="width: 18rem;">
+              <div class="card col-sm-2 m-2" style="width: 18rem;">
                 <img src="imp/mota3.jpg" height="200px" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h2>Amnesia</h2>
                 </div>
               </div>
-              <div class="card col-3 m-4" style="width: 18rem;">
+              <div class="card col-sm-2 m-2" style="width: 18rem;">
                 <img src="imp/mota5.jpg" height="200px" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h2>Gelatto</h2>
                 </div>
               </div>
-              <div class="card col-3 m-4" style="width: 18rem;">
+              <div class="card col-sm-2 m-2" style="width: 18rem;">
                 <img src="imp/mota6.jpg" height="200px" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h2>Black Domina</h2>
                 </div>
               </div>
-              <div class="card col-3 m-4" style="width: 18rem;">
+              <div class="card col-sm-2 m-2" style="width: 18rem;">
                 <img src="imp/mota7.jpg" height="200px" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h2>Critical Kush</h2>
