--- a/SQLZO/index.html
+++ b/SQLZO/index.html
@@ -15,7 +15,7 @@
     <header>
         <!--Inicio del navbar-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
                 <img src="img/710Qtpe3XgL-removebg-preview.png" width="30" height="30" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
