--- a/SQLZO/mota.html
+++ b/SQLZO/mota.html
@@ -43,7 +43,7 @@
             <h1>Tipos de Cepas</h1>
         </div>
         <!--tarjetas -->
-        <article class=" row mx-2 container  ">
+        <article class=" row mx-2   ">
             
             <div class="card col-sm-2 m-2 " style="width: 18rem;">
                 <img src="imp/mota.jpg" height="200px"  class="card-img-top " alt="...">
@@ -95,3 +95,6 @@
     <footer></footer>
 </body>
 </html>
+
+
+https://colorhunt.co/palette/62725476885bddddddeeeeee
