--- a/SQLZO/index.html
+++ b/SQLZO/index.html
@@ -78,6 +78,13 @@
                 <div class="col-3"></div>
             </div>
         </article><!--Fin de carrusel-->
+
+        <article><!--Separacion-->
+
+            <div row></div>
+
+        </article><!--Separacion-->
+
         <!--inicio botones paginas-->
         <article>
             <div class="row mt-5">
