--- a/SQLZO/productos.html
+++ b/SQLZO/productos.html
@@ -42,15 +42,24 @@
      <!--cuerpo-->
      <section>
         <article><!--imagenes-->
-          <div class="row mt-4">
+          <div class="row mt-5">
+            <div class="col-2"></div>
+            <div class="col-3">
+              <div class="card" style="background-color: #dddddd;">
+                <img src="imp/mota3.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
             <div class="col-2"></div>
             <div class="col-3">
               <a href="mota.html">
-                <img src="imp/mota2.jpg" height="500px"  alt="sin imagen">
-              </a>  
+                <img src="imp/hongos2.jpg" width="300px" height="300px"  alt="sin imagen">
+              </a>
             </div>
-            <div class="col-2"></div>
-            <div class="col-3"></div>
             <div class="col-2"></div>
           </div><!--fin imagenes-->
         </article>
