--- a/SQLZO/index.html
+++ b/SQLZO/index.html
@@ -45,7 +45,7 @@
     <section>
         <!--inicio carrusel-->
         <article>
-            <div class="row">
+            <div class="row my-3">
                 <div class="col-3"></div>
                 <div class="col-6">
                     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -81,20 +81,26 @@
 
         <article><!--Separacion-->
 
-            <div row></div>
+            <div class="row">
+                <div class="col" style="background-color: #76885B;"></div>
+            </div>
 
         </article><!--Separacion-->
 
         <!--inicio botones paginas-->
         <article>
-            <div class="row mt-5">
+            <div class="row mt-my-3">
               <div class="col-2"></div>
               <div class="col-3">
-                <img src="imp/hongos6.jpg" height="300px" width="100px" class="d-block w-100" alt="...">
+                <a href="mota.html">
+                    <img src="imp/mota5.jpg" height="300px" width="100px" class="d-block w-100" alt="...">
+                </a>
               </div>
               <div class="col-2"></div>
               <div class="col-3">
-                <img src="imp/hongos6.jpg" height="300px" width="100px" class="d-block w-100" alt="...">
+                <a href="hongo.html">
+                    <img src="imp/hongos6.jpg" height="300px" width="100px" class="d-block w-100" alt="...">
+                </a>
               </div>
               <div class="col-2"></div>
   
