--- a/SQLZO/index.html
+++ b/SQLZO/index.html
@@ -19,7 +19,9 @@
                 <img src="img/710Qtpe3XgL-removebg-preview.png" width="30" height="30" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
+              <span class="navbar-toggler-icon">
+              </span>
+
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
@@ -31,7 +33,6 @@
                 <li class="nav-item">
                   <a class="nav-link" href="productos.html">Productos
                   </a>
-                  
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Información</a>
