--- a/SQLZO/productos.html
+++ b/SQLZO/productos.html
@@ -46,19 +46,24 @@
             <div class="col-2"></div>
             <div class="col-3">
               <div class="card" style="background-color: #dddddd;">
-                <img src="imp/mota3.jpg" class="card-img-top" alt="...">
+                <img src="imp/mota3.jpg" width="300px" height="300px" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-title">Marihuana</h5>
+                  <p class="card-text"> La marihuana es la droga psicotrópica producida por la planta cuyo nombre científico es Cannabis sativa. Esa droga se emplea debido a que su principal componente químico activo, tetrahidrocannabinol (THC), puede inducir relajamiento y elevar las percepciones sensoriales.</p>
+                  <a href="mota.html" class="btn btn-primary">Ir a pagina</a>
                 </div>
               </div>
             </div>
             <div class="col-2"></div>
             <div class="col-3">
-              <a href="mota.html">
-                <img src="imp/hongos2.jpg" width="300px" height="300px"  alt="sin imagen">
-              </a>
+              <div class="card" style="background-color: #dddddd;">
+                <img src="imp/hongos6.jpg" width="300px" height="300px" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Hongos Alucinogenos</h5>
+                  <p class="card-text"> Los hongos (moho) son organismos microscópicos que viven en la materia animal o vegetal. Ayudan en la descomposición de la materia muerta y a reciclar los nutrientes en el medio ambiente.                  </p>
+                  <a href="hongo.html" class="btn btn-primary">Ir a pagina</a>
+                </div>
+              </div>
             </div>
             <div class="col-2"></div>
           </div><!--fin imagenes-->
