--- a/SQLZO/hongo.html
+++ b/SQLZO/hongo.html
@@ -43,7 +43,7 @@
     <section>
 
         <div class="title text-center">
-            <h1>Tipos de Cepas</h1>
+            <h1>Tipos de Hongos</h1>
         </div>
         <!--tarjetas -->
         <article class=" row ">
