--- a/mota7.html
+++ b/mota7.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="stylee.css">
 <body>
     <div class="orden">
-        <h1>White Widow</h1>
-        <img src="imp/mota.jpg" alt="">
+        <h1>Critical Kush</h1>
+        <img src="imp/mota7.jpg" alt="">
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque consequuntur quod nostrum <br>
             vero omnis, doloremque eos vitae dolore delectus ab perferendis libero iure porro, ullam <br>
             nisi. Quibusdam, corrupti! Voluptatum, sunt?</p>
