--- a/SQLZO/mota.html
+++ b/SQLZO/mota.html
@@ -73,14 +73,17 @@
               <div class="card col-sm-2 m-2" style="width: 18rem;">
                 <img src="imp/mota2.jpg" height="200px" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <a href="mota2.html"></a>
+                  <a href="mota4.html">
                     <H2>Super Skunk</H2>
+                  </a>
                 </div>
               </div>
               <div class="card col-sm-2 m-2" style="width: 18rem;">
                 <img src="imp/mota3.jpg" height="200px" class="card-img-top" alt="...">
                 <div class="card-body">
+                  <a href="mota3.html">
                     <h2>Amnesia</h2>
+                  </a>
                 </div>
               </div>
               <div class="card col-sm-2 m-2" style="width: 18rem;">
