--- a/SQLZO/mota.html
+++ b/SQLZO/mota.html
@@ -89,19 +89,25 @@
               <div class="card col-sm-2 m-2" style="width: 18rem;">
                 <img src="imp/mota5.jpg" height="200px" class="card-img-top" alt="...">
                 <div class="card-body">
+                  <a href="mota4.html">
                     <h2>Gelatto</h2>
+                  </a>
                 </div>
               </div>
               <div class="card col-sm-2 m-2" style="width: 18rem;">
                 <img src="imp/mota6.jpg" height="200px" class="card-img-top" alt="...">
                 <div class="card-body">
+                  <a href="mota6.html">
                     <h2>Black Domina</h2>
+                  </a>
                 </div>
               </div>
               <div class="card col-sm-2 m-2" style="width: 18rem;">
                 <img src="imp/mota7.jpg" height="200px" class="card-img-top" alt="...">
                 <div class="card-body">
+                  <a href="mota7.html">
                     <h2>Critical Kush</h2>
+                  </a>
                 </div>
               </div>
 
